# Django-React-Notes

./: .gitignore  package-lock.json  pyproject.toml
backend/: db.sqlite3
backend/api/: views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: api.js
