[tool.poetry]
name = "django-react-notes"
version = "0.1.0"
description = ""
authors = ["Nithin1729S <sureshnithin1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-cors-headers = "^4.5.0"
pyjwt = "^2.9.0"
djangorestframework = "^3.15.2"
asgiref = "^3.8.1"
sqlparse = "^0.5.1"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
